--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
             <a href="work.html">Work</a>
             <a href="#">About</a>
-            <a href="https://drive.google.com/file/d/1E6I_ByoTbx1zOa8Shhnzqsr7uuzNw48a/view?usp=share_link" target="_blank">Resume</a>
+            <a href="https://drive.google.com/file/d/1qT3m843eGhG00N3JzAHKGzSiXUgM7BSl/view?usp=sharing" target="_blank">Resume</a>
         </div>
     </div>
     <div class="container">
